# timetable-weaver

./: package.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
client/src/electron/: api.ts  main.ts  preload.ts
client/src/frontend/: app.tsx
client/src/frontend/components/: ClassesTab.tsx  LessonsTab.tsx  OverviewTab.tsx  Sidebar.tsx  TeacherAvailabilityModal.tsx  TeachersTab.tsx  TimetableDisplay.tsx
client/src/util/timetable/: index.ts  test.js  typings.d.ts
core/: CMakeLists.txt
core/Playground/: CMakeLists.txt  main.cpp
core/TimetableGen/: CMakeLists.txt
core/TimetableGen/src/: Example.hpp  Timetable.cpp  Timetable.hpp
core/scripts/linux/: build.sh
core/scripts/windows/: build.bat
